hellomsg.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
  name: hellomsg
spec:
  clusterIP: None 
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: hellomsg

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-0
  name: hellomsg-0
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-1
  name: hellomsg-1
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-2
  name: hellomsg-2
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-3
  name: hellomsg-3
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-3
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-4
  name: hellomsg-4
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-4
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-5
  name: hellomsg-5
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-6
  name: hellomsg-6
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-6
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-7
  name: hellomsg-7
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-7
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-8
  name: hellomsg-8
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-8
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-9
  name: hellomsg-9
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: hellomsg
    statefulset.kubernetes.io/pod-name: hellomsg-9
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hellomsg
spec:
  selector:
    matchLabels:
      app: hellomsg
  serviceName: hellomsg
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hellomsg
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-group
                    operator: In
                    values:
                      - web-workers
      containers:
      - image: priitrent/hellomsg:3 
        name: hellomsg
        ports:
        - containerPort: 3000
          name: web
      tolerations:
        - key: "node-group"
          operator: Equal
          value: web-workers
          effect: NoSchedule
